ci: add workflow_dispatch trigger for manual builds

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,7 @@ on:
       - 'v*'
   pull_request:
     branches: [main]
+  workflow_dispatch:  # Permet le déclenchement manuel
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
